--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
     xmlns:fb="https://www.facebook.com/2008/fbml">
 
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="cache-control" content="public">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/lazy4.css">
-    <link rel="stylesheet" href="css/flip.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -57,6 +62,10 @@
             </div>
             <div class="modal_overlay"></div>
         </div>
+
+        <p class="pic-author">攝影師：<a
+                href="https://www.pexels.com/zh-tw/@goumbik?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels"
+                target="_blank">Lukas</a></p>
     </div>
 
     <script src="js/jquery-3.4.1.min.js"></script>
